--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <!-- Google Adsense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3603722127397404"
+          crossorigin="anonymous">
+
+  </script>
 
 </body>
 
