--- a/pages/sections/main/main_menu.html
+++ b/pages/sections/main/main_menu.html
@@ -9,7 +9,14 @@
     <div class="col-xl-2 col-md-4">
         <div class="icon-box">
             <i class="bi bi-calculator"></i>
-            <h3><a href="">Calculadoras e Conversores</a></h3>
+            <h3><a href="">Calculadoras</a></h3>
+        </div>
+    </div>
+
+    <div class="col-xl-2 col-md-4">
+        <div class="icon-box">
+            <i class="bi bi-calculator"></i>
+            <h3><a href="">Conversores</a></h3>
         </div>
     </div>
     <div class="col-xl-2 col-md-4">
@@ -22,6 +29,12 @@
         <div class="icon-box">
             <i class="ri-calendar-todo-line"></i>
             <h3><a href="">Localizador de Endereço</a></h3>
+        </div>
+    </div>
+    <div class="col-xl-2 col-md-4">
+        <div class="icon-box">
+            <i class="ri-calendar-todo-line"></i>
+            <h3><a href="">Geradores</a></h3>
         </div>
     </div>
 </div>
